# pdf-autolink

./: .gitignore  README.md  pyproject.toml  x.py
.github/workflows/: ci.yml
src/pdf_autolink/: __init__.py  config.py  constants.py  index.py  link.py  logging.py  page_ranges.py
src/pdf_autolink/passes/: __init__.py  chapters.py  clear_links.py  interface.py  page_comments.py  page_tables.py  pages.py
tests/: test_page_ranges.py
