[project]
name = "pdf-autolink"
version = "0.1.0"
description = ""
authors = [
    {name = "Marco Neumann", email = "marco@crepererum.net"},
]
dependencies = [
    "pymupdf>=1.23.3",
    "typer>=0.9.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}

[project.scripts]
pdf_autolink = "pdf_autolink:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
