[project]
name = "pdf-autolink"
version = "0.1.0"
description = ""
authors = [
    {name = "Marco Neumann", email = "marco@crepererum.net"},
]
dependencies = [
    "pymupdf>=1.23.3",
    "typer>=0.9.0",
    "structlog>=23.2.0",
    "pydantic>=2.4.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}

[project.scripts]
pdf_autolink = "pdf_autolink:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.mypy]
python_version = "3.11"
plugins = [
  "pydantic.mypy"
]

strict = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "fitz.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pdm.dev-dependencies]
test = [
    "ruff>=0.0.290",
    "mypy>=1.5.1",
]

[tool.pdm.scripts]
lint = {composite = ["mypy .", "ruff check .", "ruff format ."]}
